tests/fixtures/invalid/none_bitnot.py
# Cannot use bitwise NOT on None
x: int = ~None
